kubernetes/apps/networking/ingresses/ingressRoutes/sabnzbd/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name sabnzbd
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sab.${SECRET_DOMAIN}`)
      priority: 99
      middlewares:
        - name: headers
          namespace: networking
        - name: authelia
          namespace: networking
      services:
        - name: *name
          port: 8080
          namespace: default
    - kind: Rule
      match: Host(`sab.${SECRET_DOMAIN}`) && (Headers(`X-Api-Key`, `${SABNZBD_API_KEY}`) || Query(`apikey`, `${SABNZBD_API_KEY}`))
      priority: 100
      middlewares:
        - name: headers
          namespace: networking
      services:
        - name: *name
          port: 8080
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
